apps/grafana/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grafana
  namespace: monitoring
  labels:
    app: grafana

spec:
  replicas: 1
  selector:
    matchLabels:
      app: grafana

  template:
    metadata:
      labels:
        app: grafana

    spec:
      containers:
        - name: grafana
          image: grafana/grafana-oss:11.3.0
          ports:
            - containerPort: 3000
              name: http
          volumeMounts:
            - name: data
              mountPath: /var/lib/grafana

      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: grafana-data-claim
