apps/grafana/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: grafana
  namespace: monitoring
  annotations:
    prometheus.io/scrape: 'true'

spec:
  selector:
    app: grafana
  ports:
    - protocol: TCP
      port: 80
      targetPort: http
      name: http
