apps/grafana/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
  namespace: monitoring

spec:
  rules:
    - host: &host grafana.proxy2.lan.qidux.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: grafana
                port:
                  name: http

  tls:
    - hosts:
        - *host
      secretName: lan-wildcard-tls
